# air-tigrs

./: .buildinfo  .gitignore  Dockerfile  README.md  airflow_setup.sh  contributing.html  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  security.html  setup.cfg
.github/workflows/: book.yml  build_test.yaml
_sources/: index.md
airtigrs/: __init__.py  conftest.py  executor.py  utils.py
airtigrs/dags/: datasources-to-xnat.py  generate_study_dags.py
airtigrs/dags/datasources_to_xnat/: datasources_to_xnat.py  utils.py
airtigrs/dags/tests/: test_dag_integrity.py
airtigrs/data/tests/: TEST_settings.yml  test_config.yaml
airtigrs/executors/: config_adapters.py  drmaa_executor.py  executor.py
airtigrs/executors/tests/: test_executor.py
airtigrs/operators/: sftp.py
airtigrs/operators/tests/: test_sftp.py
airtigrs/plugins/: utils.py
airtigrs/plugins/operators/: sftp.py
airtigrs/task_groups/: xnat_ingest.py
airtigrs/task_groups/tests/: test_xnat_ingest.py
airtigrs/tests/: test_datasources_to_xnat.py  test_sftp_operator.py
airtigrs/utils/: connections.py  dates.py  xnat.py
container/: Dockerfile  docker-entrypoint.sh
containers/: Dockerfile  docker-entrypoint.sh
dags/: datasources_to_xnat.py  generate_task_parser_dags.py  sftp_to_xnat.py
dags/tests/: utils.py
dags/tests/test_datasources_to_xnat/: test_config.yaml
docs/: _config.yml  _toc.yml  modules.rst
